-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
6.9.0 Beta1
-
None
-
Operating System: Arch Linux
KDE Plasma Version: 6.2.90
KDE Frameworks Version: 6.10.0
Qt Version: 6.9.0
Kernel Version: 6.12.8-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 24 × AMD Ryzen 9 7900X3D 12-Core Processor
Memory: 93.5 GiB of RAM
Graphics Processor 1: AMD Radeon RX 7900 XT
Graphics Processor 2: AMD Radeon Graphics
Manufacturer: ASUSOperating System: Arch Linux KDE Plasma Version: 6.2.90 KDE Frameworks Version: 6.10.0 Qt Version: 6.9.0 Kernel Version: 6.12.8-arch1-1 (64-bit) Graphics Platform: Wayland Processors: 24 × AMD Ryzen 9 7900X3D 12-Core Processor Memory: 93.5 GiB of RAM Graphics Processor 1: AMD Radeon RX 7900 XT Graphics Processor 2: AMD Radeon Graphics Manufacturer: ASUS
-
-
e251ef8a5 (dev), 966790ae2 (6.9)
Several apps crash on Wayland after updating to Qt 6.9 Beta 1. For example, Kile (KDE bug report here) or qBittorrent. The apps crash immediately on start with the following error:
QWaylandShmBuffer: mmap failed (Invalid argument)
QPainter::begin: Paint device returned engine == 0, type: 3
error marshalling arguments for add_buffer (signature oi): null value passed for arg 0
Error marshalling request: Invalid argument
The Wayland connection experienced a fatal error: Invalid argument
| For Gerrit Dashboard: QTBUG-132727 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 616432,2 | XdgToplevelIcon: Reserve instead of resize list | 6.9 | qt/qtwayland | Status: MERGED | +2 | 0 |
| 616438,2 | XdgToplevelIcon: Reserve instead of resize list | dev | qt/qtwayland | Status: MERGED | +2 | 0 |